# PandasFileFormatBenchmarking

./: .gitignore  LICENSE  README.md  benchmarking.ipynb  pyproject.toml  test.py
format_benchmark_tool/: benchmarks.py  format_benchmark_tool.py
output/: results_GmWNQGP_all.csv
