[tool.poetry]
name = "benchmarking-file-formats-for-cloud"
version = "0.1.0"
license = "MIT"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "benchmarking_file_formats_for_cloud"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.3"
pandas = "^1.4.4"
pyarrow = "12.0.0"
tables = "^3.7.0"
ipykernel = "^6.15.3"
openpyxl = "^3.0.10"
lxml = "^4.9.1"
seaborn = "^0.12.0"


[tool.poetry.group.dev.dependencies]
notebook = "^6.4.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
